# squish

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  tag-release.yml
crates/squish-cli/: Cargo.toml
crates/squish-cli/src/: cli.rs  main.rs  runner.rs  walker.rs
crates/squish-cli/tests/: cli_tests.rs
crates/squish-core/: Cargo.toml
crates/squish-core/src/: error.rs  format.rs  lib.rs  naming.rs  options.rs  result.rs
crates/squish-core/src/formats/: avif.rs  gif.rs  heic.rs  jpeg.rs  mod.rs  png.rs  svg.rs  tiff.rs  webp.rs
crates/squish-core/tests/: round_trip.rs
crates/squish-core/tests/fixtures/: README.md  sample.avif  sample.heic  sample.tiff
crates/squish-video/: Cargo.toml
crates/squish-video/src/: error.rs  ffmpeg.rs  format.rs  lib.rs  options.rs  result.rs
crates/squish-video/tests/: round_trip.rs
crates/squish-video/tests/fixtures/: README.md  sample.mov  sample.webm
docs/superpowers/plans/: 2026-04-15-squish.md  2026-04-16-squish-desktop.md
docs/superpowers/specs/: 2026-04-15-squish-design.md  2026-04-16-squish-desktop-design.md
scripts/: setup.sh
