[workspace]
resolver = "2"
members = [
    "crates/squish-core",
    "crates/squish-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Local image compression tool"
repository = "https://github.com/MikeDre/squish"

[workspace.dependencies]
thiserror = "1.0"
