[workspace]
resolver = "2"
members = [
    "crates/squish-core",
    "crates/squish-cli",
    "crates/squish-video",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Local media compression & conversion tool"
homepage = "https://github.com/MikeDre/squish"
repository = "https://github.com/MikeDre/squish"
readme = "README.md"
keywords = ["image", "compression", "cli", "optimise", "jpg"]
categories = ["command-line-utilities", "multimedia::images"]

[workspace.dependencies]
thiserror = "1.0"
squish-core = { version = "0.1.0", path = "crates/squish-core" }
squish-video = { version = "0.1.0", path = "crates/squish-video" }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Conditions for На script generation)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Target platforms to build for
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# The installers to generate for each app
installers = ["shell"]
# Whether to auto-include files like READMEs, CHANGELOGs, and LICENSEs
auto-includes = true
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether dist should create the GitHub Release
create-release = true
# Dispatch on manual trigger too
dispatch-releases = true
