[package]
name = "squish-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Image compression CLI"

[[bin]]
name = "squish"
path = "src/main.rs"

[dependencies]
squish-core.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
rayon = "1"
humantime = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
