[package]
name = "squish-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core image compression library for squish"

[dependencies]
thiserror.workspace = true
oxipng = { version = "9", default-features = false, features = ["parallel"] }
imagequant = "4"
mozjpeg = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
