[package]
name = "squish-video"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Video compression library for squish (ffmpeg-backed)"

[dependencies]
squish-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
